merge model into ui